# tree-sitter-inference

./: .tree-sitter-config.json  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build_and_test.sh  bump_version.sh  debug.inf  eslint.config.js  example.inf  grammar.js  highlight.js  index.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-Inference.h  tree-sitter-Inference.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_inference/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterInference/: inference.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: const_definition.txt
test/corpus/comment/: comment.txt
test/corpus/definitions/: const.txt  context.txt  enum.txt  expression.txt  function.txt  spec.txt  struct.txt
test/corpus/directive/: use.txt
test/corpus/expressions/: binary.txt  context_assign.txt  struct.txt
test/corpus/spec/: basic_concepts.txt  constants.txt  definitions.txt  directives.txt  expressions.txt  functions.txt  general-description.txt  lexical_structure.txt  statements.txt  types.txt  variables.txt
test/corpus/statement/: assert.txt  for.txt  if_else.txt  loop.txt  variable_declaration.txt  variable_definition.txt  verify.txt
test/corpus/statements/: use_statement.txt
