[package]
name = "tree-sitter-inference"
description = "Inference grammar for tree-sitter"
version = "0.0.34"
authors = [
    "Georgii Plotnikov <accembler@gmail.com>"
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "inference"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-inference"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.25.6"

[build-dependencies]
cc = "1.2.26"
